@@ -17,6 +17,7 @@
 package no.rutebanken.marduk.gtfs;
 
 import no.rutebanken.marduk.gtfs.GtfsFileUtils;
+import no.rutebanken.marduk.routes.file.TempFileUtils;
 import no.rutebanken.marduk.routes.file.ZipFileUtils;
 import org.apache.commons.io.FileUtils;
 import org.apache.commons.io.IOUtils;
@@ -24,6 +25,7 @@ import org.junit.jupiter.api.Test;
 
 import java.io.ByteArrayInputStream;
 import java.io.File;
+import java.io.InputStream;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.util.Arrays;
@@ -41,12 +43,12 @@ public class GtfsFileUtilsTest {
     public void mergeGtfsFiles_identicalFilesShouldYieldMergedFileIdenticalToOrg() throws Exception {
 
         File input1 = new File(GTFS_FILE_1);
-        File merged = GtfsFileUtils.mergeGtfsFiles(Arrays.asList(input1, input1), GtfsExport.GTFS_EXTENDED, false);
+        File merged = GtfsFileUtils.mergeGtfsFiles(List.of(input1, input1), GtfsExport.GTFS_EXTENDED, false);
 
         // Should assert content, but no exceptions must do for now
         // assertTrue(FileUtils.sizeOf(merged) <= FileUtils.sizeOf(input1));
 
-        assertTrue(ZipFileUtils.listFilesInZip(merged).stream().anyMatch(n -> GtfsFileUtils.FEED_INFO_FILE_NAME.equals(n)));
+        assertTrue(ZipFileUtils.listFilesInZip(merged).stream().anyMatch(ze -> GtfsFileUtils.FEED_INFO_FILE_NAME.equals(ze.getName())));
     }
 
     @Test
@@ -60,12 +62,12 @@ public class GtfsFileUtilsTest {
         assertTrue(data.length >= FileUtils.sizeOf(input1));
         assertTrue(data.length >= FileUtils.sizeOf(input2));
 
-        assertTrue(ZipFileUtils.listFilesInZip(data).stream().anyMatch(n -> GtfsFileUtils.FEED_INFO_FILE_NAME.equals(n)));
+        assertTrue(ZipFileUtils.listFilesInZip(data).stream().anyMatch(ze -> GtfsFileUtils.FEED_INFO_FILE_NAME.equals(ze.getName())));
     }
 
     @Test
     public void mergeWithTransfers() throws Exception {
-        File mergedZip = GtfsFileUtils.mergeGtfsFiles(Arrays.asList(new File(GTFS_FILE_1), new File(GTFS_FILE_1)), GtfsExport.GTFS_EXTENDED, false);
+        File mergedZip = GtfsFileUtils.mergeGtfsFiles(List.of(new File(GTFS_FILE_1), new File(GTFS_FILE_1)), GtfsExport.GTFS_EXTENDED, false);
 
         List<String> transferLines = IOUtils.readLines(new ByteArrayInputStream(ZipFileUtils.extractFileFromZipFile(mergedZip, "transfers.txt")), StandardCharsets.UTF_8);
         assertThat(transferLines.size()).as("Expected file two duplicates and one other transfer to be merged to two (+ header)").isEqualTo(3);
